--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,6 +26,6 @@
           </li>
         </ul>
       </div>
-      <span class="navbar-text">profile holder</span>
+      <a class="nav-link active" aria-current="page" href="/profile">profile</a>
     </div>
   </nav>
