--- a/src/app/content/sports-school/sports-school.component.html
+++ b/src/app/content/sports-school/sports-school.component.html
@@ -1,1 +1,18 @@
-<p>sports-school works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1 style="margin-top: 10px">Спортшколы и спортивные клубы</h1>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Введите название">
+                    <button class="btn btn-outline-success" type="submit">Поиск</button>
+                </form>
+            </div>
+            <div class="card-body text-center">
+                Нет результатов
+            </div>
+        </div>
+    </div>
+</div>
