--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link active" aria-current="page" href="/sportsman">Спортсмены</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Соревнования</a>
+            <a class="nav-link active" aria-current="page" href="/competition">Соревнования</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Рейтинг</a>
