--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,16 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.btn-primary {
+    background-color: #05e0fc;
+    color: #000000;
+    border-color: #dee2e6;
+}
+
 .card-header {
     background-color: #05e0fc;
+}
+
+h2 {
+    margin-bottom: 0px !important;
 }
