--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -39,6 +39,7 @@
         </button>
         <ul class="dropdown-menu dropdown-menu-lg-end">
           <li><button class="dropdown-item" type="button" routerLink="/profile">Профиль</button></li>
+          <li><button class="dropdown-item" type="button" routerLink="/my_training">Мои тренировки</button></li>
           <li><button class="dropdown-item" type="button" routerLink="">Выйти</button></li>
         </ul>
       </div>
