--- a/src/app/content/sportsman/sportsman.component.html
+++ b/src/app/content/sportsman/sportsman.component.html
@@ -6,13 +6,18 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Введите ФИО">
+                <form class="d-flex" role="search" [formGroup]="Sportsman" (ngSubmit)="getSportsman()">
+                    <input class="form-control me-2" type="search" placeholder="Введите ФИО" formControlName="name">
                     <button class="btn btn-outline-success" type="submit">Поиск</button>
                 </form>
             </div>
             <div class="card-body text-center">
-                Нет результатов
+                <div *ngIf="data.length == 0">Нет результатов</div>
+                <div *ngIf="data.length != 0">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item" *ngFor="let sportsman of data">{{sportsman.name}}</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
