--- a/src/app/content/coach/coach.component.html
+++ b/src/app/content/coach/coach.component.html
@@ -6,13 +6,22 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Введите ФИО">
+                <form class="d-flex" role="search" [formGroup]="Coach" (ngSubmit)="getCoach()">
+                    <input class="form-control me-2" type="search" placeholder="Введите ФИО" formControlName="fullName">
                     <button class="btn btn-outline-success" type="submit">Поиск</button>
                 </form>
             </div>
             <div class="card-body text-center">
-                Нет результатов
+                <div *ngIf="data.length == 0">Нет результатов</div>
+                <div *ngIf="data.length != 0">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item" *ngFor="let coach of data">
+                            <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" routerLink="/coach/{{coach.id}}">
+                                {{coach.fullName}}
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
