--- a/src/app/content/home/home.component.html
+++ b/src/app/content/home/home.component.html
@@ -19,7 +19,7 @@
                     Ближайшие соревнования
                 </div>
                 <div class="card-body">
-                    <div class="card">
+                    <div class="card mt-3">
                         <div class="card-header">
                             Лига плавания 4-й этап
                         </div>
@@ -27,6 +27,16 @@
                             <li class="list-group-item">27.12.2023</li>
                             <li class="list-group-item">Санкт-Петербург</li>
                             <li class="list-group-item">Центр Плавания</li>
+                        </ul>
+                    </div>
+                    <div class="card mt-3">
+                        <div class="card-header">
+                            Кубок Поршня
+                        </div>
+                        <ul class="list-group list-group-horizontal">
+                            <li class="list-group-item">25.12.2023</li>
+                            <li class="list-group-item">Радиатор Спрингс</li>
+                            <li class="list-group-item">Канава</li>
                         </ul>
                     </div>
                 </div>
@@ -52,6 +62,16 @@
                                 <td>1</td>
                                 <td>Аллаяров Игорь Олегович</td>
                                 <td>31.50</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>Бим Бом Бамыч</td>
+                                <td>31.60</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Чин Чан Чон</td>
+                                <td>31.70</td>
                             </tr>
                         </tbody>
                     </table>
