--- a/src/app/content/training/training.component.html
+++ b/src/app/content/training/training.component.html
@@ -8,7 +8,7 @@
             <div class="card">
                 <div class="card-header">
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Введите ФИО спортсмена или тренера">
+                        <input class="form-control me-2" type="search" placeholder="Введите ФИО тренера">
                         <button class="btn btn-outline-success" type="submit">Поиск</button>
                     </form>
                 </div>
@@ -23,7 +23,7 @@
                     Популярные тренировки
                 </div>
                 <div class="card-body">
-                    <div class="card" *ngFor="let training of data">
+                    <div class="card mt-3" *ngFor="let training of data">
                         <div class="card-header">
                             Спорстмен - {{training.sportsman}}
                         </div>
